<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/black_bg"
    >


    <ImageView
        android:id="@+id/close"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:src="@drawable/ic_error"
        android:visibility="gone"
        />



    <ImageView
        android:id="@+id/covrIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/close"
        app:srcCompat="@drawable/ic_downloaded" />





    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/cave_label"
        android:textColor="#ffffff"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        app:layout_constraintEnd_toEndOf="@+id/covrIcon"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/covrIcon"
        app:layout_constraintTop_toBottomOf="@+id/covrIcon"
        tools:text="@string/cave_label" />

    <TextView
        android:id="@+id/titled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        android:text="@string/cave_title_holder"
        android:textColor="@android:color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/label"
        tools:text="@string/cave_title_holder" />




    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="13dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/progressor"
        android:indeterminate="true"
        android:progress="50"
        android:progressDrawable="@drawable/progressor"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titled" />

    <Button
        android:id="@+id/play_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:drawableStart="@drawable/ic_play_arrow"
        android:drawablePadding="12dp"
        android:layout_margin="12dp"
        android:textColor="@color/colorWhite"
        android:text="@string/btn_play"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintBottom_toTopOf="@id/progress_status"


        />

    <TextView
        android:id="@+id/progress_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="0%"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toBottomOf="@+id/play_btn" />

    <ProgressBar
        android:id="@+id/progression"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />



</android.support.constraint.ConstraintLayout>